ECOSUI-369 - fix user list dtyle on mobile version

--- a/src/components/widgets/CurrentTasks/style.scss
+++ b/src/components/widgets/CurrentTasks/style.scss
@@ -106,14 +106,16 @@
             position: relative;
             top: -20px;
           }
-        }
 
-        &_add {
-          margin-top: 10px;
-          margin-bottom: 10px;
-          padding-left: 0;
-          font-weight: bold;
-          max-width: 100%;
+          &-list {
+            display: flex;
+            flex-direction: column;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-left: 0;
+            font-weight: bold;
+            max-width: 100%;
+          }
         }
 
         &__text {
